--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,8 +25,9 @@ jobs:
       run: |
         buildozer android debug
 
-    - name: Upload APK artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: my-kivy-app
-        path: bin/*.apk
+    - - name: Upload APK artifact
+  uses: actions/upload-artifact@v4
+  with:
+    name: SmartCalc
+    path: bin/*.apk
+
