--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,12 +41,27 @@ jobs:
           pip install --upgrade pip
           pip install buildozer cython virtualenv
 
-      # Step 5: Build APK (Buildozer handles SDK/NDK & licenses)
+      # Step 5: Install Android command-line tools & accept licenses
+      - name: Accept Android SDK licenses
+        run: |
+          mkdir -p $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin
+
+          # Download cmdline-tools if missing
+          if [ ! -f $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager ]; then
+            wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
+            unzip -q cmdline-tools.zip -d $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/
+            mv $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/cmdline-tools $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/latest
+          fi
+
+          # Accept all licenses
+          yes | $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses
+
+      # Step 6: Build APK
       - name: Build APK
         run: |
           buildozer android debug
 
-      # Step 6: Upload APK artifact
+      # Step 7: Upload APK artifact
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
