--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,15 +41,16 @@ jobs:
           pip install --upgrade pip
           pip install buildozer cython virtualenv
 
-      # Step 5: Install Android command-line tools & accept licenses
+      # Step 5: Download cmdline-tools and accept Android SDK licenses
       - name: Accept Android SDK licenses
         run: |
-          mkdir -p $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin
+          mkdir -p $HOME/.buildozer/android/platform/android-sdk/cmdline-tools
 
           # Download cmdline-tools if missing
           if [ ! -f $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager ]; then
             wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
             unzip -q cmdline-tools.zip -d $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/
+            # Move extracted folder to 'latest'
             mv $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/cmdline-tools $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/latest
           fi
 
