--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,21 +41,11 @@ jobs:
           pip install --upgrade pip
           pip install buildozer cython virtualenv
 
-      # Step 5: Download cmdline-tools and accept Android SDK licenses
-      - name: Accept Android SDK licenses
+      # Step 5: Patch SDK path for Buildozer
+      - name: Patch SDK path for Buildozer
         run: |
-          mkdir -p $HOME/.buildozer/android/platform/android-sdk/cmdline-tools
-
-          # Download cmdline-tools if missing
-          if [ ! -f $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager ]; then
-            wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
-            unzip -q cmdline-tools.zip -d $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/
-            # Move extracted folder to 'latest'
-            mv $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/cmdline-tools $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/latest
-          fi
-
-          # Accept all licenses
-          yes | $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses
+          mkdir -p $HOME/.buildozer/android/platform/android-sdk/tools
+          ln -s $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/latest $HOME/.buildozer/android/platform/android-sdk/tools
 
       # Step 6: Build APK
       - name: Build APK
