--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,8 +44,18 @@ jobs:
       # Step 5: Patch SDK path for Buildozer
       - name: Patch SDK path for Buildozer
         run: |
+          mkdir -p $HOME/.buildozer/android/platform/android-sdk/cmdline-tools
           mkdir -p $HOME/.buildozer/android/platform/android-sdk/tools
-          ln -s $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/latest $HOME/.buildozer/android/platform/android-sdk/tools
+
+          # Download cmdline-tools if missing
+          if [ ! -f $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager ]; then
+            wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
+            unzip -q cmdline-tools.zip -d $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/
+            mv $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/cmdline-tools $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/latest
+          fi
+
+          # Create symlink so Buildozer finds sdkmanager
+          ln -s $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin $HOME/.buildozer/android/platform/android-sdk/tools/bin
 
       # Step 6: Build APK
       - name: Build APK
