--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,12 +57,18 @@ jobs:
           # Create symlink so Buildozer finds sdkmanager
           ln -s $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin $HOME/.buildozer/android/platform/android-sdk/tools/bin
 
-      # Step 6: Build APK
+      # Step 6: Accept licenses and install Build-Tools
+      - name: Install Android Build-Tools
+        run: |
+          yes | $HOME/.buildozer/android/platform/android-sdk/tools/bin/sdkmanager --licenses
+          $HOME/.buildozer/android/platform/android-sdk/tools/bin/sdkmanager "platform-tools" "build-tools;36.0.0" "platforms;android-36"
+
+      # Step 7: Build APK
       - name: Build APK
         run: |
-          buildozer android debug
+          buildozer android debug --p4a-branch stable
 
-      # Step 7: Upload APK artifact
+      # Step 8: Upload APK artifact
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
